--- a/app/views/layouts/preview.html.slim
+++ b/app/views/layouts/preview.html.slim
@@ -5,7 +5,6 @@ html lang="en"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     title= content_for?(:title) ? yield(:title) : "15th & P"
-    = csrf_meta_tags
     = stylesheet_link_tag "https://bootswatch.com/lumen/bootstrap.css"
     = stylesheet_link_tag "application", :media => "all"
     = favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
@@ -13,16 +12,70 @@ html lang="en"
     = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72'
     = favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
     = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
-    = javascript_include_tag "application"
+    = javascript_include_tag "https://code.jquery.com/jquery-1.12.0.min.js"
+    = javascript_include_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
     /! Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"
 
+    css:
+      .container {
+        max-width: 960px;
+        margin: 0 auto;
+      }
+
+      .unit {
+        margin-bottom: 2em;
+      }
+
+      .unit h2 {
+        color: #fff;
+        background-color: #333;
+        border-radius: 3px;
+        padding: 2px 0.5em;
+      }
+
+      .unit h2 small {
+        margin-left: 0.3em;
+      }
+
+      .room h3 {
+        margin-top: 0;
+      }
+
+      .room .summary {
+        text-align: right;
+      }
+
+      .room {
+        border-top: 1px solid rgba(0,0,0,0.1);
+        padding-top: 1em;
+        margin-top: 0.2em;
+        margin-bottom: 1.5em;
+      }
+
+      .preview-only {
+        position: fixed;
+        bottom: 0;
+        height: 2em;
+      }
+
+      .navbar-inverse {
+        background-color: rgba(0, 0, 0, 0.8);
+        border-width: 0;
+      }
+
+
 
   body
-    .preview-only
-      = link_to "Home", root_path
-      = link_to "Deploy", deploy_path, method: :post
+    .container= yield
+
+    .navbar.navbar-inverse.navbar-fixed-bottom.preview-only
+      .container
+        ul.nav.navbar-nav
+          li= link_to "Home", root_path
+        ul.nav.navbar-nav.pull-right
+          li= button_to "Deploy", deploy_path
 
       = bootstrap_flash
 
@@ -43,5 +96,3 @@ html lang="en"
                 return false
             })
         })
-
-    .container= yield
