Working photo upload to S3
Still need to get the UI functional and show progress, completion

--- a/app/views/layouts/preview.html.slim
+++ b/app/views/layouts/preview.html.slim
@@ -65,9 +65,12 @@ html lang="en"
         border-width: 0;
       }
 
+      .photo-grid img {
+        width: 200px
+      }
 
 
-  body
+body
     .container= yield
 
     .navbar.navbar-inverse.navbar-fixed-bottom.preview-only
